<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B0FFFFFF"
    android:backgroundTint="#45EF09"
    tools:context=".MainActivity2">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="58dp"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/todo___8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="60dp"
        android:layout_height="62dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/todo__7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502"
        app:srcCompat="@android:drawable/ic_media_pause"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="62dp"
        android:layout_height="65dp"
        android:background="#BDACAC"
        android:contentDescription="@string/todo6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        app:srcCompat="@android:drawable/stat_sys_data_bluetooth"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:background="#B1AAAA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo5" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="61dp"
        android:layout_height="63dp"
        android:background="#CFB4B4"
        android:backgroundTint="#EDEBEB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691"
        app:srcCompat="@android:drawable/ic_btn_speak_now"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo4" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="60dp"
        android:layout_height="63dp"
        android:background="#C3ADAD"
        android:contentDescription="@string/todo3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691"
        app:srcCompat="@android:drawable/ic_dialog_dialer"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton15"
        android:layout_width="98dp"
        android:layout_height="86dp"
        android:backgroundTint="#B30D0D"
        android:foregroundTint="#150000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933"
        app:srcCompat="@android:drawable/ic_menu_call"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="98dp"
        android:layout_height="32dp"
        android:text="@string/add_call_btn"
        android:textColor="#006064"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="101dp"
        android:layout_height="34dp"
        android:text="@string/haldcll_btn"
        android:textColor="#006064"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="104dp"
        android:layout_height="32dp"
        android:text="@string/bluetooth_btn"
        android:textColor="#006064"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="73dp"
        android:layout_height="35dp"
        android:text="@string/mute_btn"
        android:textColor="#006064"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="81dp"
        android:layout_height="35dp"
        android:text="@string/keypad_btn"
        android:textColor="#006064"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="96dp"
        android:layout_height="33dp"
        android:text="@string/speaker_btn"
        android:textColor="#006064"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton18"
        android:layout_width="123dp"
        android:layout_height="112dp"
        android:background="#419C31"
        app:layout_constraintBottom_toTopOf="@+id/imageButton15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222"
        app:srcCompat="?android:attr/listChoiceIndicatorSingle"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo_Pict" />

</androidx.constraintlayout.widget.ConstraintLayout>